@@ -17,8 +17,11 @@ require_once 'libraries/common.lib.php';
  */
 $GLOBALS['js_include'][] = 'rte/common.js';
 $GLOBALS['js_include'][] = 'rte/triggers.js';
-$GLOBALS['js_include'][] = 'codemirror/lib/codemirror.js';
-$GLOBALS['js_include'][] = 'codemirror/mode/mysql/mysql.js';
+
+if ($GLOBALS['cfg']['CodemirrorEnable']) {
+    $GLOBALS['js_include'][] = 'codemirror/lib/codemirror.js';
+    $GLOBALS['js_include'][] = 'codemirror/mode/mysql/mysql.js';
+}
 
 /**
  * Include all other files
