@@ -1069,18 +1069,20 @@ $(document).ready(function() {
 
         // These settings are duplicated from the .ready()function in functions.js
         var height = $('#sql_query_edit').css('height');
-        codemirror_editor = CodeMirror.fromTextArea($('textarea[name="sql_query_edit"]')[0], {
-            lineNumbers: true,
-            matchBrackets: true,
-            indentUnit: 4,
-            mode: "text/x-mysql",
-            lineWrapping: true
-        });
-        codemirror_editor.getScrollerElement().style.height = height;
-        codemirror_editor.refresh();
+        if (typeof CodeMirror !== 'undefined') {
+            codemirror_editor = CodeMirror.fromTextArea($('textarea[name="sql_query_edit"]')[0], {
+                lineNumbers: true,
+                matchBrackets: true,
+                indentUnit: 4,
+                mode: "text/x-mysql",
+                lineWrapping: true
+            });
+            codemirror_editor.getScrollerElement().style.height = height;
+            codemirror_editor.refresh();
+        }
 
         $("input.btnSave").click(function() {
-            if (codemirror_editor !== undefined) {
+            if (codemirror_editor) {
                 var sql_query = codemirror_editor.getValue();
             } else {
                 var sql_query = $(this).prev().val();
@@ -1673,6 +1675,10 @@ function PMA_prettyProfilingNum(num, acc)
  */
 function PMA_SQLPrettyPrint(string)
 {
+    if (typeof CodeMirror == 'undefined') {
+        return string;
+    }
+
     var mode = CodeMirror.getMode({},"text/x-mysql");
     var stream = new CodeMirror.StringStream(string);
     var state = mode.startState();
