@@ -119,8 +119,11 @@ $sql_query = '';
  */
 $js_include[] = 'common.js';
 $js_include[] = 'querywindow.js';
-$js_include[] = 'codemirror/lib/codemirror.js';
-$js_include[] = 'codemirror/mode/mysql/mysql.js';
+
+if ($GLOBALS['cfg']['CodemirrorEnable']) {
+    $GLOBALS['js_include'][] = 'codemirror/lib/codemirror.js';
+    $GLOBALS['js_include'][] = 'codemirror/mode/mysql/mysql.js';
+}
 
 if (PMA_isValid($_REQUEST['auto_commit'], 'identical', 'true')) {
     $js_events[] = array(
