@@ -16,8 +16,11 @@ require_once 'libraries/common.inc.php';
 $GLOBALS['js_include'][] = 'functions.js';
 $GLOBALS['js_include'][] = 'makegrid.js';
 $GLOBALS['js_include'][] = 'sql.js';
-$GLOBALS['js_include'][] = 'codemirror/lib/codemirror.js';
-$GLOBALS['js_include'][] = 'codemirror/mode/mysql/mysql.js';
+
+if ($GLOBALS['cfg']['CodemirrorEnable']) {
+    $GLOBALS['js_include'][] = 'codemirror/lib/codemirror.js';
+    $GLOBALS['js_include'][] = 'codemirror/mode/mysql/mysql.js';
+}
 
 require_once 'libraries/server_common.inc.php';
 require_once 'libraries/sql_query_form.lib.php';
