@@ -19,8 +19,11 @@ $GLOBALS['js_include'][] = 'tbl_change.js';
 // the next one needed because sql.php may do a "goto" to tbl_structure.php
 $GLOBALS['js_include'][] = 'tbl_structure.js';
 $GLOBALS['js_include'][] = 'gis_data_editor.js';
-$GLOBALS['js_include'][] = 'codemirror/lib/codemirror.js';
-$GLOBALS['js_include'][] = 'codemirror/mode/mysql/mysql.js';
+
+if ($GLOBALS['cfg']['CodemirrorEnable']) {
+    $GLOBALS['js_include'][] = 'codemirror/lib/codemirror.js';
+    $GLOBALS['js_include'][] = 'codemirror/mode/mysql/mysql.js';
+}
 
 
 /**
